--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,1 @@
-{
-  "name": "SonicBoom",
-  "description": "The most annoying botmever",
-  "version": "1.0.0",
-  "main": "SonicBoom.py",
-  "scripts": {
-    "start": "python SonicBoom.py"
-  },
-  "dependencies": {
-    "discord.py": "11.1.0",
-  }
-}
+discord.py
